Fix lot of bugs and update to 1.16.2.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -3,6 +3,7 @@
   "key.lambdacontrols.look_left": "Look left",
   "key.lambdacontrols.look_right": "Look right",
   "key.lambdacontrols.look_up": "Look up",
+  "key.lambdacontrols.ring": "Show controls ring",
   "lambdacontrols.action.attack": "Attack",
   "lambdacontrols.action.back": "Back",
   "lambdacontrols.action.chat": "Open Chat",
@@ -64,6 +65,8 @@
   "lambdacontrols.controller.disconnected": "Controller %d disconnected.",
   "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use %sSDL2 Gamepad Tool%s",
   "lambdacontrols.controller.mappings.3": "and put the mapping in `%s.minecraft/config/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.error": "Error while loading mappings.",
+  "lambdacontrols.controller.mappings.error.write": "Error while writing mappings to file.",
   "lambdacontrols.controller.mappings.updated": "Updated mappings!",
   "lambdacontrols.controller_type.default": "default",
   "lambdacontrols.controller_type.dualshock": "DualShock",
@@ -90,6 +93,7 @@
   "lambdacontrols.menu.invert_right_x_axis": "Invert Right X",
   "lambdacontrols.menu.invert_right_y_axis": "Invert Right Y",
   "lambdacontrols.menu.keyboard_controls": "Keyboard Controls...",
+  "lambdacontrols.menu.mappings.open_input_str": "Open Mappings File Editor",
   "lambdacontrols.menu.mouse_speed": "Mouse Speed",
   "lambdacontrols.menu.reacharound.horizontal": "Front Block Placing",
   "lambdacontrols.menu.reacharound.vertical": "Vertical Reacharound",
@@ -101,6 +105,7 @@
   "lambdacontrols.menu.title.gameplay": "Gameplay Options",
   "lambdacontrols.menu.title.general": "General Options",
   "lambdacontrols.menu.title.hud": "HUD Options",
+  "lambdacontrols.menu.title.mappings.string": "Mappings File Editor",
   "lambdacontrols.menu.unfocused_input": "Unfocused Input",
   "lambdacontrols.menu.virtual_mouse": "Virtual Mouse",
   "lambdacontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
