--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -61,6 +61,8 @@
   "lambdacontrols.controller.disconnected": "Manette %d déconnecté.",
   "lambdacontrols.controller.mappings.1": "Pour configurer les correspondances de la manette, veuillez utiliser %sSDL2 Gamepad Tool%s",
   "lambdacontrols.controller.mappings.3": "et mettez les correspondances dans le fichier `%s.minecraft/config/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.error": "Une erreur est apparue pendant le chargement des manettes.",
+  "lambdacontrols.controller.mappings.error.write": "Une erreur est apparue pendant l'écriture des manettes au fichier.",
   "lambdacontrols.controller.mappings.updated": "Configuration des manettes mise à jour!",
   "lambdacontrols.controller_type.default": "default",
   "lambdacontrols.controller_type.dualshock": "DualShock",
@@ -86,10 +88,11 @@
   "lambdacontrols.menu.invert_right_x_axis": "Inverser le stick droit (X)",
   "lambdacontrols.menu.invert_right_y_axis": "Inverser le stick droit (Y)",
   "lambdacontrols.menu.keyboard_controls": "Contrôles clavier...",
+  "lambdacontrols.menu.mappings.open_input_str": "Ouvrir l'éditeur de fichier des manettes",
   "lambdacontrols.menu.mouse_speed": "Vitesse de la souris",
   "lambdacontrols.menu.reacharound.horizontal": "Placement avant de bloc",
   "lambdacontrols.menu.reacharound.vertical": "Placement vertical",
-  "lambdacontrols.menu.reload_controller_mappings": "Recharge la configuration des manettes",
+  "lambdacontrols.menu.reload_controller_mappings": "Recharger les manettes",
   "lambdacontrols.menu.rotation_speed": "Vitesse de rotation",
   "lambdacontrols.menu.title": "LambdaControls - Paramètres",
   "lambdacontrols.menu.title.controller": "Options de manettes",
@@ -97,6 +100,7 @@
   "lambdacontrols.menu.title.gameplay": "Options de Gameplay",
   "lambdacontrols.menu.title.general": "Options générales",
   "lambdacontrols.menu.title.hud": "Options du HUD",
+  "lambdacontrols.menu.title.mappings.string": "Éditeur du fichier des manettes",
   "lambdacontrols.menu.unfocused_input": "Entrée en fond",
   "lambdacontrols.menu.virtual_mouse": "Souris virtuelle",
   "lambdacontrols.menu.virtual_mouse.skin": "Apparence souris virtuelle",
