:bookmark: LambdaControls v1.5.0: Update to Minecraft 1.16.2.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -3,6 +3,7 @@
   "key.lambdacontrols.look_left": "Regarder à gauche",
   "key.lambdacontrols.look_right": "Regarder à droite",
   "key.lambdacontrols.look_up": "Regarder en haut",
+  "key.lambdacontrols.ring": "Affiche l'anneau de contrôle",
   "lambdacontrols.action.attack": "Attaquer",
   "lambdacontrols.action.back": "Reculer",
   "lambdacontrols.action.chat": "Ouvrir le tchat",
@@ -31,12 +32,15 @@
   "lambdacontrols.action.toggle_smooth_camera": "Basculer en mode cinématique",
   "lambdacontrols.action.use": "Utiliser",
   "lambdacontrols.action.zoom": "Zoom",
+  "lambdacontrols.action.zoom.in": "Augmenter le zoom",
+  "lambdacontrols.action.zoom.out": "Diminuer le zoom",
+  "lambdacontrols.action.zoom.reset": "Remettre le zoom à zéro",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
   "lambdacontrols.button.y": "Y",
-  "lambdacontrols.button.left_bumper": "Gâchette haute gauche",
-  "lambdacontrols.button.right_bumper": "Gâchette haute droite",
+  "lambdacontrols.button.left_bumper": "Gâchette gauche",
+  "lambdacontrols.button.right_bumper": "Gâchette droite",
   "lambdacontrols.button.back": "Retour",
   "lambdacontrols.button.start": "Touche Menu",
   "lambdacontrols.button.guide": "Guide",
@@ -81,6 +85,7 @@
   "lambdacontrols.menu.controller_type": "Type de manette",
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Zone morte",
+  "lambdacontrols.menu.fast_block_placing": "Placement rapide de blocs",
   "lambdacontrols.menu.fly_drifting": "Inertie de vol",
   "lambdacontrols.menu.fly_drifting_vertical": "Inertie verticale de vol",
   "lambdacontrols.menu.hud_enable": "Activer le HUD",
