More GUI rework! Controller controls tab works now.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -63,8 +63,8 @@
   "lambdacontrols.button.unknown": "Unknown (%d)",
   "lambdacontrols.controller.connected": "Controller %d connected.",
   "lambdacontrols.controller.disconnected": "Controller %d disconnected.",
-  "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use %sSDL2 Gamepad Tool%s",
-  "lambdacontrols.controller.mappings.3": "and put the mapping in `%s.minecraft/config/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use %s",
+  "lambdacontrols.controller.mappings.3": "and paste the mapping in the mappings file editor.",
   "lambdacontrols.controller.mappings.error": "Error while loading mappings.",
   "lambdacontrols.controller.mappings.error.write": "Error while writing mappings to file.",
   "lambdacontrols.controller.mappings.updated": "Updated mappings!",
