Fix #37, fix some movement bugs, more WIP GUI rework.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -108,6 +108,7 @@
   "lambdacontrols.menu.title.general": "General Options",
   "lambdacontrols.menu.title.hud": "HUD Options",
   "lambdacontrols.menu.title.mappings.string": "Mappings File Editor",
+  "lambdacontrols.menu.title.visual": "Appearance Options",
   "lambdacontrols.menu.unfocused_input": "Unfocused Input",
   "lambdacontrols.menu.virtual_mouse": "Virtual Mouse",
   "lambdacontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
