--- a/src/main/resources/assets/lambdacontrols/lang/es_mx.json
+++ b/src/main/resources/assets/lambdacontrols/lang/es_mx.json
@@ -62,7 +62,7 @@
   "lambdacontrols.button.unknown": "Desconocido (%d)",
   "lambdacontrols.controller.connected": "Controlador %d conectado.",
   "lambdacontrols.controller.disconnected": "Controlador %d desconectado.",
-  "lambdacontrols.controller.mappings.1": "Para configurar las asignaciones del controlador, utilice %sSDL2 Gamepad Tool%s",
+  "lambdacontrols.controller.mappings.1": "Para configurar las asignaciones del controlador, utilice %s",
   "lambdacontrols.controller.mappings.3": "y poner el mapeo de asignaciones en `%s.minecraft/config/gamecontrollerdb.txt%s`.",
   "lambdacontrols.controller.mappings.updated": "Mapeo actualizados!",
   "lambdacontrols.controller_type.default": "por defecto",
@@ -95,12 +95,14 @@
   "lambdacontrols.menu.reacharound.vertical": "Alcance vertical",
   "lambdacontrols.menu.reload_controller_mappings": "Recargar asignaciones de controlador",
   "lambdacontrols.menu.rotation_speed": "Velocidad de rotación",
+  "lambdacontrols.menu.separator.controller": "Controlador",
   "lambdacontrols.menu.title": "LambdaControls - Configuraciones",
   "lambdacontrols.menu.title.controller": "Opciones de controlador",
   "lambdacontrols.menu.title.controller_controls": "Controles de controlador",
   "lambdacontrols.menu.title.gameplay": "Opciones de juego",
   "lambdacontrols.menu.title.general": "Opciones generales",
   "lambdacontrols.menu.title.hud": "Opciones de HUD",
+  "lambdacontrols.menu.title.visual": "Opciones de apariencia",
   "lambdacontrols.menu.unfocused_input": "Entrada desenfocada",
   "lambdacontrols.menu.virtual_mouse": "Ratón virtual",
   "lambdacontrols.menu.virtual_mouse.skin": "Piel de ratón virtual",
