--- a/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -63,8 +63,8 @@
   "lambdacontrols.button.unknown": "Inconnu (%d)",
   "lambdacontrols.controller.connected": "Manette %d connecté.",
   "lambdacontrols.controller.disconnected": "Manette %d déconnecté.",
-  "lambdacontrols.controller.mappings.1": "Pour configurer les correspondances de la manette, veuillez utiliser %sSDL2 Gamepad Tool%s",
-  "lambdacontrols.controller.mappings.3": "et mettez les correspondances dans le fichier `%s.minecraft/config/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.1": "Pour configurer les correspondances de la manette, veuillez utiliser %s",
+  "lambdacontrols.controller.mappings.3": "et copier/coller les correspondances dans l'éditeur inclut.",
   "lambdacontrols.controller.mappings.error": "Une erreur est apparue pendant le chargement des manettes.",
   "lambdacontrols.controller.mappings.error.write": "Une erreur est apparue pendant l'écriture des manettes au fichier.",
   "lambdacontrols.controller.mappings.updated": "Configuration des manettes mise à jour!",
@@ -99,12 +99,14 @@
   "lambdacontrols.menu.reacharound.vertical": "Placement vertical",
   "lambdacontrols.menu.reload_controller_mappings": "Recharger les manettes",
   "lambdacontrols.menu.rotation_speed": "Vitesse de rotation",
+  "lambdacontrols.menu.separator.general": "Général",
+  "lambdacontrols.menu.separator.controller": "Manette",
   "lambdacontrols.menu.title": "LambdaControls - Paramètres",
   "lambdacontrols.menu.title.controller": "Options de manettes",
   "lambdacontrols.menu.title.controller_controls": "Contrôles de la manette",
   "lambdacontrols.menu.title.gameplay": "Options de Gameplay",
   "lambdacontrols.menu.title.general": "Options générales",
-  "lambdacontrols.menu.title.hud": "Options du HUD",
+  "lambdacontrols.menu.title.visual": "Options d'apparences",
   "lambdacontrols.menu.title.mappings.string": "Éditeur du fichier des manettes",
   "lambdacontrols.menu.unfocused_input": "Entrée en fond",
   "lambdacontrols.menu.virtual_mouse": "Souris virtuelle",
