More WIP GUI rework!

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -79,6 +79,7 @@
   "lambdacontrols.controls_mode.touchscreen": "Touchscreen",
   "lambdacontrols.hud_side.left": "left",
   "lambdacontrols.hud_side.right": "right",
+  "lambdacontrols.menu.analog_movement": "Analog Movement",
   "lambdacontrols.menu.auto_switch_mode": "Auto Switch Mode",
   "lambdacontrols.menu.controller": "Controller",
   "lambdacontrols.menu.controller2": "Second Controller",
@@ -114,6 +115,7 @@
   "lambdacontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
   "lambdacontrols.narrator.unbound": "Unbound %s",
   "lambdacontrols.not_bound": "Not bound",
+  "lambdacontrols.tooltip.analog_movement": "Enables analog movement when possible.",
   "lambdacontrols.tooltip.auto_switch_mode": "If the controls mode should be switched to Controller automatically if one is connected.",
   "lambdacontrols.tooltip.controller2": "Second controller to use, which allows Joy-Cons support for example.",
   "lambdacontrols.tooltip.controller_type": "The controller type to display the correct buttons.",
