--- a/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -64,7 +64,7 @@
   "lambdacontrols.controller.connected": "Manette %d connecté.",
   "lambdacontrols.controller.disconnected": "Manette %d déconnecté.",
   "lambdacontrols.controller.mappings.1": "Pour configurer les correspondances de la manette, veuillez utiliser %s",
-  "lambdacontrols.controller.mappings.3": "et copier/coller les correspondances dans l'éditeur inclut.",
+  "lambdacontrols.controller.mappings.3": "et copier/coller les correspondances dans l'éditeur de manette.",
   "lambdacontrols.controller.mappings.error": "Une erreur est apparue pendant le chargement des manettes.",
   "lambdacontrols.controller.mappings.error.write": "Une erreur est apparue pendant l'écriture des manettes au fichier.",
   "lambdacontrols.controller.mappings.updated": "Configuration des manettes mise à jour!",
@@ -79,6 +79,7 @@
   "lambdacontrols.controls_mode.touchscreen": "Tactile",
   "lambdacontrols.hud_side.left": "gauche",
   "lambdacontrols.hud_side.right": "droit",
+  "lambdacontrols.menu.analog_movement": "Mouvement analogique",
   "lambdacontrols.menu.auto_switch_mode": "Changement auto de mode",
   "lambdacontrols.menu.controller": "Manette",
   "lambdacontrols.menu.controller2": "Deuxième manette",
@@ -106,13 +107,15 @@
   "lambdacontrols.menu.title.controller_controls": "Contrôles de la manette",
   "lambdacontrols.menu.title.gameplay": "Options de Gameplay",
   "lambdacontrols.menu.title.general": "Options générales",
+  "lambdacontrols.menu.title.hud": "Options du HUD",
+  "lambdacontrols.menu.title.mappings.string": "Éditeur de manettes",
   "lambdacontrols.menu.title.visual": "Options d'apparences",
-  "lambdacontrols.menu.title.mappings.string": "Éditeur du fichier des manettes",
   "lambdacontrols.menu.unfocused_input": "Entrée en fond",
   "lambdacontrols.menu.virtual_mouse": "Souris virtuelle",
   "lambdacontrols.menu.virtual_mouse.skin": "Apparence souris virtuelle",
   "lambdacontrols.narrator.unbound": "Délier %s",
   "lambdacontrols.not_bound": "Non défini",
+  "lambdacontrols.tooltip.analog_movement": "Active le mouvement analogique si possible.",
   "lambdacontrols.tooltip.auto_switch_mode": "Détermine si le mode de contrôle doit automatiquement changer sur Manette si une manette est connectée et inversement.",
   "lambdacontrols.tooltip.controller2": "Défini une deuxième manette, utile dans le cas d'utilisation de Joy-Cons.",
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
