--- a/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -79,6 +79,7 @@
   "lambdacontrols.controls_mode.touchscreen": "Tactile",
   "lambdacontrols.hud_side.left": "gauche",
   "lambdacontrols.hud_side.right": "droit",
+  "lambdacontrols.menu.analog_movement": "Mouvement analogique",
   "lambdacontrols.menu.auto_switch_mode": "Changement auto de mode",
   "lambdacontrols.menu.controller": "Manette",
   "lambdacontrols.menu.controller2": "Deuxième manette",
@@ -114,6 +115,7 @@
   "lambdacontrols.menu.virtual_mouse.skin": "Apparence souris virtuelle",
   "lambdacontrols.narrator.unbound": "Délier %s",
   "lambdacontrols.not_bound": "Non défini",
+  "lambdacontrols.tooltip.analog_movement": "Active le mouvement analogique si possible.",
   "lambdacontrols.tooltip.auto_switch_mode": "Détermine si le mode de contrôle doit automatiquement changer sur Manette si une manette est connectée et inversement.",
   "lambdacontrols.tooltip.controller2": "Défini une deuxième manette, utile dans le cas d'utilisation de Joy-Cons.",
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
