Add stick-independent dead zones (#32) and update license headers.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -85,7 +85,6 @@
   "lambdacontrols.menu.controller2": "Second Controller",
   "lambdacontrols.menu.controller_type": "Controller Type",
   "lambdacontrols.menu.controls_mode": "Mode",
-  "lambdacontrols.menu.dead_zone": "Dead Zone",
   "lambdacontrols.menu.fast_block_placing": "Fast Block Placing",
   "lambdacontrols.menu.fly_drifting": "Fly Drifting",
   "lambdacontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
@@ -94,11 +93,13 @@
   "lambdacontrols.menu.invert_right_x_axis": "Invert Right X",
   "lambdacontrols.menu.invert_right_y_axis": "Invert Right Y",
   "lambdacontrols.menu.keyboard_controls": "Keyboard Controls...",
+  "lambdacontrols.menu.left_dead_zone": "Left Dead Zone",
   "lambdacontrols.menu.mappings.open_input_str": "Open Mappings File Editor",
   "lambdacontrols.menu.mouse_speed": "Mouse Speed",
   "lambdacontrols.menu.reacharound.horizontal": "Front Block Placing",
   "lambdacontrols.menu.reacharound.vertical": "Vertical Reacharound",
   "lambdacontrols.menu.reload_controller_mappings": "Reload Controller Mappings",
+  "lambdacontrols.menu.right_dead_zone": "Right Dead Zone",
   "lambdacontrols.menu.rotation_speed": "Rotation Speed",
   "lambdacontrols.menu.separator.controller": "Controller",
   "lambdacontrols.menu.separator.general": "General",
@@ -120,16 +121,17 @@
   "lambdacontrols.tooltip.controller2": "Second controller to use, which allows Joy-Cons support for example.",
   "lambdacontrols.tooltip.controller_type": "The controller type to display the correct buttons.",
   "lambdacontrols.tooltip.controls_mode": "The controls mode.",
-  "lambdacontrols.tooltip.dead_zone": "The dead zone for the controller's analogue sticks.",
   "lambdacontrols.tooltip.fast_block_placing": "While flying in creative mode, enables fast block placing depending on your speed. §cOn some servers this might be considered as cheating.",
   "lambdacontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
   "lambdacontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
   "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "lambdacontrols.tooltip.hud_side": "The position of the HUD.",
+  "lambdacontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analogue stick.",
   "lambdacontrols.tooltip.mouse_speed": "The controller's emulated mouse speed.",
   "lambdacontrols.tooltip.reacharound.horizontal": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file.",
+  "lambdacontrols.tooltip.right_dead_zone": "The dead zone for the controller's right analogue stick.",
   "lambdacontrols.tooltip.rotation_speed": "The camera rotation speed in controller mode.",
   "lambdacontrols.tooltip.unfocused_input": "Allow controller input when the window is not focused.",
   "lambdacontrols.tooltip.virtual_mouse": "Enable the virtual mouse which is handful in the case of a splitscreen.",
