--- a/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -85,7 +85,6 @@
   "lambdacontrols.menu.controller2": "Deuxième manette",
   "lambdacontrols.menu.controller_type": "Type de manette",
   "lambdacontrols.menu.controls_mode": "Mode",
-  "lambdacontrols.menu.dead_zone": "Zone morte",
   "lambdacontrols.menu.fast_block_placing": "Placement rapide de blocs",
   "lambdacontrols.menu.fly_drifting": "Inertie de vol",
   "lambdacontrols.menu.fly_drifting_vertical": "Inertie verticale de vol",
@@ -94,11 +93,13 @@
   "lambdacontrols.menu.invert_right_x_axis": "Inverser le stick droit (X)",
   "lambdacontrols.menu.invert_right_y_axis": "Inverser le stick droit (Y)",
   "lambdacontrols.menu.keyboard_controls": "Contrôles clavier...",
+  "lambdacontrols.menu.left_dead_zone": "Zone morte axe gauche",
   "lambdacontrols.menu.mappings.open_input_str": "Ouvrir l'éditeur de fichier des manettes",
   "lambdacontrols.menu.mouse_speed": "Vitesse de la souris",
   "lambdacontrols.menu.reacharound.horizontal": "Placement avant de bloc",
   "lambdacontrols.menu.reacharound.vertical": "Placement vertical",
   "lambdacontrols.menu.reload_controller_mappings": "Recharger les manettes",
+  "lambdacontrols.menu.right_dead_zone": "Zone morte axe droit",
   "lambdacontrols.menu.rotation_speed": "Vitesse de rotation",
   "lambdacontrols.menu.separator.general": "Général",
   "lambdacontrols.menu.separator.controller": "Manette",
@@ -120,16 +121,17 @@
   "lambdacontrols.tooltip.controller2": "Défini une deuxième manette, utile dans le cas d'utilisation de Joy-Cons.",
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
   "lambdacontrols.tooltip.controls_mode": "Change le mode de contrôle.",
-  "lambdacontrols.tooltip.dead_zone": "Zone morte des axes de la manette.",
   "lambdacontrols.tooltip.fast_block_placing": "Active le placement rapide de blocs en vol.",
   "lambdacontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement Vanilla.",
   "lambdacontrols.tooltip.fly_drifting_vertical": "Pendant que le joueur vole, active le glissement vertical Vanilla.",
   "lambdacontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
+  "lambdacontrols.tooltip.left_dead_zone": "Zone morte de l'axe gauche de la manette.",
   "lambdacontrols.tooltip.mouse_speed": "Change la vitesse de la souris émulée par la manette.",
   "lambdacontrols.tooltip.reacharound.horizontal": "Active le placement avant de blocs, §cpeut être considérer comme de la triche sur certains serveurs§r.",
   "lambdacontrols.tooltip.reacharound.vertical": "Active le placement vertical de blocs, c'est-à-dire de blocs en dessous du bloc sur lequel vous êtes placé, §cpeut être considérer comme de la triche sur certains serveurs§r.",
   "lambdacontrols.tooltip.reload_controller_mappings": "Recharge le fichier de configuration des manettes.",
+  "lambdacontrols.tooltip.right_dead_zone": "Zone morte de l'axe droit de la manette.",
   "lambdacontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra.",
   "lambdacontrols.tooltip.unfocused_input": "Autorise les entrées manette quand la fenêtre n'est pas sélectionnée.",
   "lambdacontrols.tooltip.virtual_mouse": "Active la souris virtuelle qui est pratique dans le cas d'un écran partagé.",
