Add max values to axes, fixes #41.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -95,6 +95,10 @@
   "lambdacontrols.menu.keyboard_controls": "Keyboard Controls...",
   "lambdacontrols.menu.left_dead_zone": "Left Dead Zone",
   "lambdacontrols.menu.mappings.open_input_str": "Open Mappings File Editor",
+  "lambdacontrols.menu.max_left_x_value": "Left X Axis Max Value",
+  "lambdacontrols.menu.max_left_y_value": "Left Y Axis Max Value",
+  "lambdacontrols.menu.max_right_x_value": "Right X Axis Max Value",
+  "lambdacontrols.menu.max_right_y_value": "Right Y Axis Max Value",
   "lambdacontrols.menu.mouse_speed": "Mouse Speed",
   "lambdacontrols.menu.reacharound.horizontal": "Front Block Placing",
   "lambdacontrols.menu.reacharound.vertical": "Vertical Reacharound",
@@ -127,6 +131,10 @@
   "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "lambdacontrols.tooltip.hud_side": "The position of the HUD.",
   "lambdacontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analogue stick.",
+  "lambdacontrols.tooltip.max_left_x_value": "Changes what the mod considers the highest value for the left X axis. Useful if your axis does not use the full range and seems slow.",
+  "lambdacontrols.tooltip.max_left_y_value": "Changes what the mod considers the highest value for the left Y axis. Useful if your axis does not use the full range and seems slow.",
+  "lambdacontrols.tooltip.max_right_x_value": "Changes what the mod considers the highest value for the right X axis. Useful if your axis does not use the full range and seems slow.",
+  "lambdacontrols.tooltip.max_right_y_value": "Changes what the mod considers the highest value for the right Y axis. Useful if your axis does not use the full range and seems slow.",
   "lambdacontrols.tooltip.mouse_speed": "The controller's emulated mouse speed.",
   "lambdacontrols.tooltip.reacharound.horizontal": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
