--- a/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -95,6 +95,10 @@
   "lambdacontrols.menu.keyboard_controls": "Contrôles clavier...",
   "lambdacontrols.menu.left_dead_zone": "Zone morte axe gauche",
   "lambdacontrols.menu.mappings.open_input_str": "Ouvrir l'éditeur de fichier des manettes",
+  "lambdacontrols.menu.max_left_x_value": "Valeur maximale de l'axe X gauche",
+  "lambdacontrols.menu.max_left_y_value": "Valeur maximale de l'axe Y gauche",
+  "lambdacontrols.menu.max_right_x_value": "Valeur maximale de l'axe X droit",
+  "lambdacontrols.menu.max_right_y_value": "Valeur maximale de l'axe Y droit",
   "lambdacontrols.menu.mouse_speed": "Vitesse de la souris",
   "lambdacontrols.menu.reacharound.horizontal": "Placement avant de bloc",
   "lambdacontrols.menu.reacharound.vertical": "Placement vertical",
@@ -127,6 +131,10 @@
   "lambdacontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
   "lambdacontrols.tooltip.left_dead_zone": "Zone morte de l'axe gauche de la manette.",
+  "lambdacontrols.tooltip.max_left_x_value": "Change ce que le mod considère comme valeur maximale pour l'axe X gauche. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "lambdacontrols.tooltip.max_left_y_value": "Change ce que le mod considère comme valeur maximale pour l'axe Y gauche. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "lambdacontrols.tooltip.max_right_x_value": "Change ce que le mod considère comme valeur maximale pour l'axe X droit. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "lambdacontrols.tooltip.max_right_y_value": "Change ce que le mod considère comme valeur maximale pour l'axe Y droit. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
   "lambdacontrols.tooltip.mouse_speed": "Change la vitesse de la souris émulée par la manette.",
   "lambdacontrols.tooltip.reacharound.horizontal": "Active le placement avant de blocs, §cpeut être considérer comme de la triche sur certains serveurs§r.",
   "lambdacontrols.tooltip.reacharound.vertical": "Active le placement vertical de blocs, c'est-à-dire de blocs en dessous du bloc sur lequel vous êtes placé, §cpeut être considérer comme de la triche sur certains serveurs§r.",
