--- a/src/main/resources/assets/lambdacontrols/lang/es_mx.json
+++ b/src/main/resources/assets/lambdacontrols/lang/es_mx.json
@@ -1,20 +1,21 @@
 {
-  "key.lambdacontrols.look_down": "Mira hacia abajo",
-  "key.lambdacontrols.look_left": "Mira a la izquierda",
-  "key.lambdacontrols.look_right": "Mira a la derecha",
-  "key.lambdacontrols.look_up": "Mira a la arriba",
-  "lambdacontrols.action.attack": "Ataque",
-  "lambdacontrols.action.back": "Caminar hacia atrás",
+  "key.lambdacontrols.look_down": "Mirar hacia abajo",
+  "key.lambdacontrols.look_left": "Mirar hacia izquierda",
+  "key.lambdacontrols.look_right": "Mirar hacia derecha",
+  "key.lambdacontrols.look_up": "Mirar hacia arriba",
+  "key.lambdacontrols.ring": "Mostrar anillo de controles",
+  "lambdacontrols.action.attack": "Atacar",
+  "lambdacontrols.action.back": "Retroceder",
   "lambdacontrols.action.chat": "Abrir chat",
   "lambdacontrols.action.drop_item": "Tirar ítem",
   "lambdacontrols.action.exit": "Salir",
-  "lambdacontrols.action.forward": "Caminar hacia delante",
+  "lambdacontrols.action.forward": "Avanzar",
   "lambdacontrols.action.hit": "Golpear",
   "lambdacontrols.action.hotbar_left": "Hotbar a la izquierda",
   "lambdacontrols.action.hotbar_right": "Hotbar a la derecha",
   "lambdacontrols.action.inventory": "Inventario",
   "lambdacontrols.action.jump": "Saltar",
-  "lambdacontrols.action.left": "Caminar hacia la izquierda",
+  "lambdacontrols.action.left": "Izquierda",
   "lambdacontrols.action.pause_game": "Pausar juego",
   "lambdacontrols.action.pick_block": "Recoger bloque",
   "lambdacontrols.action.pickup": "Recoger",
@@ -22,7 +23,7 @@
   "lambdacontrols.action.place": "Poner",
   "lambdacontrols.action.player_list": "Lista de jugadores",
   "lambdacontrols.action.quick_move": "Mover items rápidamente",
-  "lambdacontrols.action.right": "Caminar hacia la derecha",
+  "lambdacontrols.action.right": "Derecha",
   "lambdacontrols.action.screenshot": "Tomar captura de pantalla",
   "lambdacontrols.action.sneak": "Agacharse",
   "lambdacontrols.action.sprint": "Correr",
@@ -64,7 +65,9 @@
   "lambdacontrols.controller.disconnected": "Controlador %d desconectado.",
   "lambdacontrols.controller.mappings.1": "Para configurar las asignaciones del controlador, utilice %s",
   "lambdacontrols.controller.mappings.3": "y poner el mapeo de asignaciones en `%s.minecraft/config/gamecontrollerdb.txt%s`.",
-  "lambdacontrols.controller.mappings.updated": "Mapeo actualizados!",
+  "lambdacontrols.controller.mappings.error": "Error al cargar asignaciones.",
+  "lambdacontrols.controller.mappings.error.write": "Error al escribir asignaciones al archivo.",
+  "lambdacontrols.controller.mappings.updated": "Asignaciones actualizados!",
   "lambdacontrols.controller_type.default": "por defecto",
   "lambdacontrols.controller_type.dualshock": "DualShock",
   "lambdacontrols.controller_type.switch": "Switch",
@@ -76,52 +79,67 @@
   "lambdacontrols.controls_mode.touchscreen": "Pantalla táctil",
   "lambdacontrols.hud_side.left": "izquierda",
   "lambdacontrols.hud_side.right": "derecha",
-  "lambdacontrols.menu.auto_switch_mode": "Modo de cambio automático",
+  "lambdacontrols.menu.analog_movement": "Movimiento analógico",
+  "lambdacontrols.menu.auto_switch_mode": "Cambio de modo automático",
   "lambdacontrols.menu.controller": "Controlador",
   "lambdacontrols.menu.controller2": "Segundo controlador",
   "lambdacontrols.menu.controller_type": "Tipo de controlador",
   "lambdacontrols.menu.controls_mode": "Modo",
-  "lambdacontrols.menu.dead_zone": "Zona muerta",
   "lambdacontrols.menu.fast_block_placing": "Colocación rápida de bloques",
-  "lambdacontrols.menu.fly_drifting": "Fly Drifting",
-  "lambdacontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
+  "lambdacontrols.menu.fly_drifting": "Volar a la deriva",
+  "lambdacontrols.menu.fly_drifting_vertical": "Volar a la deriva vertical",
   "lambdacontrols.menu.hud_enable": "Habilitar HUD",
   "lambdacontrols.menu.hud_side": "Lado de HUD",
   "lambdacontrols.menu.invert_right_x_axis": "Invertir derecha X",
   "lambdacontrols.menu.invert_right_y_axis": "Invertir derecha Y",
   "lambdacontrols.menu.keyboard_controls": "Controles del teclado...",
+  "lambdacontrols.menu.left_dead_zone": "Zona muerta izquierda",
+  "lambdacontrols.menu.mappings.open_input_str": "Abrir el editor de archivo de asignaciones",
+  "lambdacontrols.menu.max_left_x_value": "Valor máximo del eje X izquierdo",
+  "lambdacontrols.menu.max_left_y_value": "Valor máximo del eje Y izquierdo",
+  "lambdacontrols.menu.max_right_x_value": "Valor máximo del eje X derecho",
+  "lambdacontrols.menu.max_right_y_value": "Valor máximo del eje Y derecho",
   "lambdacontrols.menu.mouse_speed": "Velocidad del ratón",
   "lambdacontrols.menu.reacharound.horizontal": "Colocación de bloque frontal",
   "lambdacontrols.menu.reacharound.vertical": "Alcance vertical",
   "lambdacontrols.menu.reload_controller_mappings": "Recargar asignaciones de controlador",
+  "lambdacontrols.menu.right_dead_zone": "Zona muerta derecha",
   "lambdacontrols.menu.rotation_speed": "Velocidad de rotación",
   "lambdacontrols.menu.separator.controller": "Controlador",
+  "lambdacontrols.menu.separator.general": "General",
   "lambdacontrols.menu.title": "LambdaControls - Configuraciones",
   "lambdacontrols.menu.title.controller": "Opciones de controlador",
   "lambdacontrols.menu.title.controller_controls": "Controles de controlador",
   "lambdacontrols.menu.title.gameplay": "Opciones de juego",
   "lambdacontrols.menu.title.general": "Opciones generales",
   "lambdacontrols.menu.title.hud": "Opciones de HUD",
+  "lambdacontrols.menu.title.mappings.string": "Editor de archivo de asignaciones",
   "lambdacontrols.menu.title.visual": "Opciones de apariencia",
   "lambdacontrols.menu.unfocused_input": "Entrada desenfocada",
   "lambdacontrols.menu.virtual_mouse": "Ratón virtual",
   "lambdacontrols.menu.virtual_mouse.skin": "Piel de ratón virtual",
   "lambdacontrols.narrator.unbound": "Resetear %s",
   "lambdacontrols.not_bound": "No ligado",
+  "lambdacontrols.tooltip.analog_movement": "Habilita el movimiento analógico cuando es posible.",
   "lambdacontrols.tooltip.auto_switch_mode": "Si el modo de controles debe cambiarse a Controlador automáticamente si hay uno conectado.",
   "lambdacontrols.tooltip.controller2": "Segundo controlador a uso, que permite el soporte de Joy-Cons por ejemplo.",
   "lambdacontrols.tooltip.controller_type": "El tipo de controlador para mostrar los botones correctos.",
   "lambdacontrols.tooltip.controls_mode": "El modo de controles.",
-  "lambdacontrols.tooltip.dead_zone": "La zona muerta para los sticks analógicos del controlador.",
   "lambdacontrols.tooltip.fast_block_placing": "Mientras vuela en modo creativo, permite la colocación rápida de bloques dependiendo su velocidad. §cEn algunos servidores, esto podría considerarse como trampa.",
   "lambdacontrols.tooltip.fly_drifting": "Mientras vuela, habilita la deriva/inercia de vainilla.",
   "lambdacontrols.tooltip.fly_drifting_vertical": "Mientras vuela, habilita la deriva/inercia vertical de vainilla.",
   "lambdacontrols.tooltip.hud_enable": "Alterna el indicador del botón del controlador en pantalla.",
   "lambdacontrols.tooltip.hud_side": "La posición del HUD.",
+  "lambdacontrols.tooltip.left_dead_zone": "La zona muerta de la palanca analógica izquierda del controlador.",
+  "lambdacontrols.tooltip.max_left_x_value": "Cambia lo que el mod considera el valor más alto para el eje X izquierdo. Útil si su eje no usa el rango completo y parece lento.",
+  "lambdacontrols.tooltip.max_left_y_value": "Cambia lo que el mod considera el valor más alto para el eje Y izquierdo. Útil si su eje no usa el rango completo y parece lento.",
+  "lambdacontrols.tooltip.max_right_x_value": "Cambia lo que el mod considera el valor más alto para el eje X derecho. Útil si su eje no usa el rango completo y parece lento.",
+  "lambdacontrols.tooltip.max_right_y_value": "Cambia lo que el mod considera el valor más alto para el eje Y derecho. Útil si su eje no usa el rango completo y parece lento.",
   "lambdacontrols.tooltip.mouse_speed": "La velocidad del ratón emulada del controlador.",
   "lambdacontrols.tooltip.reacharound.horizontal": "Habilita la colocación del bloque frontal, §cpodría considerarse trampa en algunos servidores§r.",
   "lambdacontrols.tooltip.reacharound.vertical": "Habilita el alcance vertical, §cpodría considerarse trampa en algunos servidores§r.",
   "lambdacontrols.tooltip.reload_controller_mappings": "Vuelve a cargar el archivo de asignaciones del controlador.",
+  "lambdacontrols.tooltip.right_dead_zone": "La zona muerta de la palanca analógica derecha del controlador.",
   "lambdacontrols.tooltip.rotation_speed": "La velocidad de rotación de la cámara en modo controlador.",
   "lambdacontrols.tooltip.unfocused_input": "Habilita entrada del controlador cuando la ventana no está enfocada.",
   "lambdacontrols.tooltip.virtual_mouse": "Habilite el ratón virtual que es útil en el caso de una pantalla dividida.",
