Update and fix Ok Zoomer compatibility (#68)

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -32,9 +32,9 @@
   "lambdacontrols.action.toggle_smooth_camera": "Toggle Cinematic Camera",
   "lambdacontrols.action.use": "Use",
   "lambdacontrols.action.zoom": "Zoom",
-  "lambdacontrols.action.zoom.in": "Increase Zoom",
-  "lambdacontrols.action.zoom.out": "Decrease Zoom",
-  "lambdacontrols.action.zoom.reset": "Reset Zoom",
+  "lambdacontrols.action.zoom_in": "Increase Zoom",
+  "lambdacontrols.action.zoom_out": "Decrease Zoom",
+  "lambdacontrols.action.zoom_reset": "Reset Zoom",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
