--- a/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -32,9 +32,9 @@
   "lambdacontrols.action.toggle_smooth_camera": "Basculer en mode cinématique",
   "lambdacontrols.action.use": "Utiliser",
   "lambdacontrols.action.zoom": "Zoom",
-  "lambdacontrols.action.zoom.in": "Augmenter le zoom",
-  "lambdacontrols.action.zoom.out": "Diminuer le zoom",
-  "lambdacontrols.action.zoom.reset": "Remettre le zoom à zéro",
+  "lambdacontrols.action.zoom_in": "Augmenter le zoom",
+  "lambdacontrols.action.zoom_out": "Diminuer le zoom",
+  "lambdacontrols.action.zoom_reset": "Remettre le zoom à zéro",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
