--- a/src/main/resources/assets/lambdacontrols/lang/zh_cn.json
+++ b/src/main/resources/assets/lambdacontrols/lang/zh_cn.json
@@ -32,9 +32,9 @@
   "lambdacontrols.action.toggle_smooth_camera": "切换电影视角",
   "lambdacontrols.action.use": "使用物品/放置方块",
   "lambdacontrols.action.zoom": "视野缩放",
-  "lambdacontrols.action.zoom.in": "缩放时将视野推近",
-  "lambdacontrols.action.zoom.out": "缩放时将视野拉远",
-  "lambdacontrols.action.zoom.reset": "缩放时重置缩放距离",
+  "lambdacontrols.action.zoom_in": "缩放时将视野推近",
+  "lambdacontrols.action.zoom_out": "缩放时将视野拉远",
+  "lambdacontrols.action.zoom_reset": "缩放时重置缩放距离",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
