--- a/src/main/resources/assets/lambdacontrols/lang/es_mx.json
+++ b/src/main/resources/assets/lambdacontrols/lang/es_mx.json
@@ -32,9 +32,9 @@
   "lambdacontrols.action.toggle_smooth_camera": "Cambiar cámara cinematográfica",
   "lambdacontrols.action.use": "Usar",
   "lambdacontrols.action.zoom": "Zoom",
-  "lambdacontrols.action.zoom.in": "Aumentar zoom",
-  "lambdacontrols.action.zoom.out": "Disminuir zoom",
-  "lambdacontrols.action.zoom.reset": "Restablecer zoom",
+  "lambdacontrols.action.zoom_in": "Aumentar zoom",
+  "lambdacontrols.action.zoom_out": "Disminuir zoom",
+  "lambdacontrols.action.zoom_reset": "Restablecer zoom",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
