--- a/src/main/resources/assets/lambdacontrols/lang/tr_tr.json
+++ b/src/main/resources/assets/lambdacontrols/lang/tr_tr.json
@@ -32,9 +32,9 @@
   "lambdacontrols.action.toggle_smooth_camera": "Sinemaitk Kameraya Geçme",
   "lambdacontrols.action.use": "Kullanma",
   "lambdacontrols.action.zoom": "Büyütme",
-  "lambdacontrols.action.zoom.in": "Büyütmeyi Arttır",
-  "lambdacontrols.action.zoom.out": "Büyütmeyi Azalt",
-  "lambdacontrols.action.zoom.reset": "Büyütmeyi Sıfırla",
+  "lambdacontrols.action.zoom_in": "Büyütmeyi Arttır",
+  "lambdacontrols.action.zoom_out": "Büyütmeyi Azalt",
+  "lambdacontrols.action.zoom_reset": "Büyütmeyi Sıfırla",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
