--- a/src/main/resources/assets/lambdacontrols/lang/zh_cn.json
+++ b/src/main/resources/assets/lambdacontrols/lang/zh_cn.json
@@ -50,24 +50,24 @@
   "lambdacontrols.button.dpad_right": "十字键右",
   "lambdacontrols.button.dpad_down": "十字键下",
   "lambdacontrols.button.dpad_left": "十字键左",
-  "lambdacontrols.axis.left_x+": "左摇杆右（X 轴正向）",
-  "lambdacontrols.axis.left_y+": "左摇杆上（Y 轴正向）",
-  "lambdacontrols.axis.right_x+": "右摇杆右（X 轴正向）",
-  "lambdacontrols.axis.right_y+": "右摇杆上（Y 轴正向）",
+  "lambdacontrols.axis.left_x+": "左摇杆右（X轴正向）",
+  "lambdacontrols.axis.left_y+": "左摇杆上（Y轴正向）",
+  "lambdacontrols.axis.right_x+": "右摇杆右（X轴正向）",
+  "lambdacontrols.axis.right_y+": "右摇杆上（Y轴正向）",
   "lambdacontrols.axis.left_trigger": "左扳机键",
   "lambdacontrols.axis.right_trigger": "右扳机键",
-  "lambdacontrols.axis.left_x-": "左摇杆左（X 轴负向）",
-  "lambdacontrols.axis.left_y-": "左摇杆下（Y 轴负向）",
-  "lambdacontrols.axis.right_x-": "右摇杆左（X 轴负向）",
-  "lambdacontrols.axis.right_y-": "右摇杆下（Y 轴负向）",
+  "lambdacontrols.axis.left_x-": "左摇杆左（X轴负向）",
+  "lambdacontrols.axis.left_y-": "左摇杆下（Y轴负向）",
+  "lambdacontrols.axis.right_x-": "右摇杆左（X轴负向）",
+  "lambdacontrols.axis.right_y-": "右摇杆下（Y轴负向）",
   "lambdacontrols.button.unknown": "未知（%d）",
   "lambdacontrols.controller.connected": "手柄 %d 已连接。",
   "lambdacontrols.controller.disconnected": "手柄 %d 已断开。",
-  "lambdacontrols.controller.mappings.1": "请使用 %s 配置手柄键位映射",
-  "lambdacontrols.controller.mappings.3": "并将键位映射文件放入此路径：`%s.minecraft/config/gamecontrollerdb.txt%s`。",
+  "lambdacontrols.controller.mappings.1": "请使用 %s 配置手柄按键映射",
+  "lambdacontrols.controller.mappings.3": "并将按键映射文件放入此路径：`%s.minecraft/config/gamecontrollerdb.txt%s`。",
   "lambdacontrols.controller.mappings.error": "发生错误，无法读取按键映射文件。",
   "lambdacontrols.controller.mappings.error.write": "发生错误，无法保存按键映射文件。",
-  "lambdacontrols.controller.mappings.updated": "键位映射已更新！",
+  "lambdacontrols.controller.mappings.updated": "按键映射已更新！",
   "lambdacontrols.controller_type.default": "默认",
   "lambdacontrols.controller_type.dualshock": "DualShock",
   "lambdacontrols.controller_type.switch": "Switch",
@@ -79,52 +79,67 @@
   "lambdacontrols.controls_mode.touchscreen": "触摸屏",
   "lambdacontrols.hud_side.left": "左侧",
   "lambdacontrols.hud_side.right": "右侧",
+  "lambdacontrols.menu.analog_movement": "识别摇杆输入的精确值",
   "lambdacontrols.menu.auto_switch_mode": "自动切换模式",
   "lambdacontrols.menu.controller": "手柄",
   "lambdacontrols.menu.controller2": "额外手柄",
   "lambdacontrols.menu.controller_type": "手柄类型",
   "lambdacontrols.menu.controls_mode": "模式",
-  "lambdacontrols.menu.dead_zone": "摇杆死区",
   "lambdacontrols.menu.fast_block_placing": "方块快速放置",
   "lambdacontrols.menu.fly_drifting": "水平方向飞行惯性",
   "lambdacontrols.menu.fly_drifting_vertical": "垂直方向飞行惯性",
-  "lambdacontrols.menu.hud_enable": "启用 HUD",
-  "lambdacontrols.menu.hud_side": "HUD 位置",
-  "lambdacontrols.menu.invert_right_x_axis": "反转右摇杆 X 轴",
-  "lambdacontrols.menu.invert_right_y_axis": "反转右摇杆 Y 轴",
+  "lambdacontrols.menu.hud_enable": "启用HUD",
+  "lambdacontrols.menu.hud_side": "HUD位置",
+  "lambdacontrols.menu.invert_right_x_axis": "反转右摇杆X轴",
+  "lambdacontrols.menu.invert_right_y_axis": "反转右摇杆Y轴",
   "lambdacontrols.menu.keyboard_controls": "键盘控制…",
+  "lambdacontrols.menu.left_dead_zone": "左摇杆死区",
   "lambdacontrols.menu.mappings.open_input_str": "编辑按键映射文件",
+  "lambdacontrols.menu.max_left_x_value": "左摇杆X轴最大值识别范围",
+  "lambdacontrols.menu.max_left_y_value": "左摇杆Y轴最大值识别范围",
+  "lambdacontrols.menu.max_right_x_value": "右摇杆X轴最大值识别范围",
+  "lambdacontrols.menu.max_right_y_value": "右摇杆Y轴最大值识别范围",
   "lambdacontrols.menu.mouse_speed": "鼠标移动速度",
   "lambdacontrols.menu.reacharound.horizontal": "水平方向方块放置辅助",
   "lambdacontrols.menu.reacharound.vertical": "垂直方向方块放置辅助",
-  "lambdacontrols.menu.reload_controller_mappings": "重新加载手柄键位映射",
+  "lambdacontrols.menu.reload_controller_mappings": "重新加载手柄按键映射",
+  "lambdacontrols.menu.right_dead_zone": "右摇杆死区",
   "lambdacontrols.menu.rotation_speed": "镜头旋转速度",
+  "lambdacontrols.menu.separator.controller": "手柄",
+  "lambdacontrols.menu.separator.general": "通用",
   "lambdacontrols.menu.title": "LambdaControls — 设置",
   "lambdacontrols.menu.title.controller": "手柄选项",
   "lambdacontrols.menu.title.controller_controls": "手柄控制",
   "lambdacontrols.menu.title.gameplay": "游戏内容选项",
   "lambdacontrols.menu.title.general": "通用选项",
-  "lambdacontrols.menu.title.hud": "HUD 选项",
+  "lambdacontrols.menu.title.hud": "HUD选项",
   "lambdacontrols.menu.title.mappings.string": "编辑按键映射文件",
+  "lambdacontrols.menu.title.visual": "界面选项",
   "lambdacontrols.menu.unfocused_input": "非活动状态输入",
   "lambdacontrols.menu.virtual_mouse": "虚拟鼠标",
   "lambdacontrols.menu.virtual_mouse.skin": "虚拟鼠标指针样式",
   "lambdacontrols.narrator.unbound": "取消绑定 %s",
   "lambdacontrols.not_bound": "未绑定",
+  "lambdacontrols.tooltip.analog_movement": "若游戏机制允许，则可根据推动摇杆的力度与幅度决定移动的速度。",
   "lambdacontrols.tooltip.auto_switch_mode": "如果已有手柄连接，则自动切换为手柄操作模式。",
   "lambdacontrols.tooltip.controller2": "使用额外的手柄，比如将一左一右的两个 Joy-Con 合为一个功能完全的手柄。",
   "lambdacontrols.tooltip.controller_type": "选择手柄类型，以显示对应的按键图标。",
   "lambdacontrols.tooltip.controls_mode": "操作模式",
-  "lambdacontrols.tooltip.dead_zone": "手柄摇杆的死区，死区决定摇杆要偏移中心位置多远才能让摇杆输入有效。",
-  "lambdacontrols.tooltip.fast_block_placing": "在创造模式中处于飞行状态时，可以根据你飞行的速度快速放置方块。§c在部分服务器可能会被认定为作弊。",
+  "lambdacontrols.tooltip.fast_block_placing": "在创造模式中处于飞行状态时，可以根据你飞行的速度快速放置方块。\n§c在部分服务器可能会被认定为作弊。",
   "lambdacontrols.tooltip.fly_drifting": "处于飞行状态时，启用原版的水平方向飞行惯性（缓停滑行）。",
   "lambdacontrols.tooltip.fly_drifting_vertical": "处于飞行状态时，启用原版的垂直方向飞行惯性（缓停滑行）。",
   "lambdacontrols.tooltip.hud_enable": "显示手柄按键操作提示。",
-  "lambdacontrols.tooltip.hud_side": "HUD 的位置位于画面的哪一侧。",
+  "lambdacontrols.tooltip.hud_side": "HUD的位置位于画面的哪一侧。",
+  "lambdacontrols.tooltip.left_dead_zone": "左摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
+  "lambdacontrols.tooltip.max_left_x_value": "更改左摇杆X轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致在识别摇杆输入的精确值的情况下，左右移动较为缓慢等问题，本项可能会有所帮助。",
+  "lambdacontrols.tooltip.max_left_y_value": "更改左摇杆Y轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致在识别摇杆输入的精确值的情况下，前后移动较为缓慢等问题，本项可能会有所帮助。",
+  "lambdacontrols.tooltip.max_right_x_value": "更改右摇杆X轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致镜头左右旋转较为缓慢等问题，本项可能会有所帮助。",
+  "lambdacontrols.tooltip.max_right_y_value": "更改右摇杆Y轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致镜头上下旋转较为缓慢等问题，本项可能会有所帮助。",
   "lambdacontrols.tooltip.mouse_speed": "手柄模拟的鼠标的移动速度。",
-  "lambdacontrols.tooltip.reacharound.horizontal": "启用水平方向方块放置辅助，可在脚下方块的前方放置方块。§c在部分服务器可能会被认定为作弊。",
-  "lambdacontrols.tooltip.reacharound.vertical": "启用垂直方向方块放置辅助，可在脚下方块的下方放置方块。§c在部分服务器可能会被认定为作弊。",
+  "lambdacontrols.tooltip.reacharound.horizontal": "启用水平方向方块放置辅助，可在脚下方块的前方放置方块。\n§c在部分服务器可能会被认定为作弊。",
+  "lambdacontrols.tooltip.reacharound.vertical": "启用垂直方向方块放置辅助，可在脚下方块的下方放置方块。\n§c在部分服务器可能会被认定为作弊。",
   "lambdacontrols.tooltip.reload_controller_mappings": "重新加载手柄的按键映射文件。",
+  "lambdacontrols.tooltip.right_dead_zone": "右摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
   "lambdacontrols.tooltip.rotation_speed": "手柄操作模式下的镜头旋转速度。",
   "lambdacontrols.tooltip.unfocused_input": "即使游戏窗口处于非活动状态，也允许手柄进行按键输入。",
   "lambdacontrols.tooltip.virtual_mouse": "启用虚拟鼠标，在分屏的情况下很有用。",
