Added an option to always show the HUD while in Controller Mode, matching the legacy behaviour of LambdaControls. This option is enabled by default so that users migrating from LambdaControls will have a consistent experience.

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -96,6 +96,7 @@
   "midnightcontrols.menu.fly_drifting": "Fly Drifting",
   "midnightcontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
   "midnightcontrols.menu.hud_enable": "Enable HUD",
+  "midnightcontrols.menu.hud_always_show": "Always Show HUD When in Controller Mode",
   "midnightcontrols.menu.hud_side": "HUD Side",
   "midnightcontrols.menu.invert_right_x_axis": "Invert Right X",
   "midnightcontrols.menu.invert_right_y_axis": "Invert Right Y",
@@ -136,6 +137,7 @@
   "midnightcontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
   "midnightcontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
   "midnightcontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
+  "midnightcontrols.tooltip.hud_always_show": "Toggles whether or not to always show the HUD when in Controller Mode, regardless of whether or not a controller is actually connected.",
   "midnightcontrols.tooltip.hud_side": "The position of the HUD.",
   "midnightcontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analogue stick.",
   "midnightcontrols.tooltip.max_left_x_value": "Changes what the mod considers the highest value for the left X axis. Useful if your axis does not use the full range and seems slow.",
