hud_always_show: Add untranslated strings to es_mx, fr_ca, fr_ft, tr_tr, and zh_cn.

--- a/src/main/resources/assets/midnightcontrols/lang/tr_tr.json
+++ b/src/main/resources/assets/midnightcontrols/lang/tr_tr.json
@@ -89,6 +89,7 @@
   "midnightcontrols.menu.fly_drifting": "Kayarak Uç",
   "midnightcontrols.menu.fly_drifting_vertical": "Dikey uçuşta kayaaak git",
   "midnightcontrols.menu.hud_enable": "HUD'u Etkinleştir",
+  "midnightcontrols.menu.hud_always_show": "Always Show HUD When in Controller Mode",
   "midnightcontrols.menu.hud_side": "HUD Yanı",
   "midnightcontrols.menu.invert_right_x_axis": "Sağ X'i Terse Çevir",
   "midnightcontrols.menu.invert_right_y_axis": "Sağ Y'i Terse Çevir.",
@@ -120,6 +121,7 @@
   "midnightcontrols.tooltip.fly_drifting": "Uçarken, Vanilla'daki gibi ani duruşlarda kayma efektini etkinleştirir.",
   "midnightcontrols.tooltip.fly_drifting_vertical": "Yukarı/aşağı uçarken, Vanilla'daki gibi ani duruşlarda kayma efektini etkinleştirir.",
   "midnightcontrols.tooltip.hud_enable": "Ekranın üstünde oyun kolu tuşu göstergesini açar/kapatır.",
+  "midnightcontrols.tooltip.hud_always_show": "Toggles whether or not to always show the HUD when in Controller Mode, regardless of whether or not a controller is actually connected.",
   "midnightcontrols.tooltip.hud_side": "HUD'un konumu",
   "midnightcontrols.tooltip.mouse_speed": "Oyun kolunun taklit edilen fare hızı.",
   "midnightcontrols.tooltip.reacharound.horizontal": "Hızlı blok koymayı etkinleştirir. §cBazı sunucular bunun hile olduğunu düşünebilir.§r.",
