MidnightControls 1.0.0 - Bedrock icon resourcepack
- Bring back Lambda-style XBox icons and add optional resourcepack for Bedrock-style icons (Closes #16)
- Make screens on which the controller behaves like a mouse configurable in the advanced config.

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -72,6 +72,11 @@
   "midnightcontrols.controller.mappings.error.write": "Fehler beim Schreiben der Controller Mappings.",
   "midnightcontrols.controller.mappings.updated": "Mappings aktualisiert!",
   "midnightcontrols.controller_type.default": "Standard",
+  "midnightcontrols.controller_type.dualshock": "DualShock",
+  "midnightcontrols.controller_type.switch": "Switch",
+  "midnightcontrols.controller_type.xbox": "Xbox",
+  "midnightcontrols.controller_type.steam": "Steam",
+  "midnightcontrols.controller_type.ouya": "OUYA",
   "midnightcontrols.controls_mode.default": "Tastatur/Maus",
   "midnightcontrols.controls_mode.controller": "Controller",
   "midnightcontrols.controls_mode.touchscreen": "Touchscreen",
@@ -141,8 +146,14 @@
   "midnightcontrols.tooltip.rotation_speed": "Die Kamerarotationsgeschwindigkeit im Controllermodus.",
   "midnightcontrols.tooltip.unfocused_input": "Erlaube Controllereingabe auch wenn das Fenster nicht fokussiert ist.",
   "midnightcontrols.tooltip.virtual_mouse": "Aktiviere die virtuelle Maus.",
-  "midnightcontrols.virtual_mouse.skin.default_light": "Standard Light",
-  "midnightcontrols.virtual_mouse.skin.default_dark": "Standard Dark",
-  "midnightcontrols.virtual_mouse.skin.second_light": "Alternativ Light",
-  "midnightcontrols.virtual_mouse.skin.second_dark": "Alternativ Dark"
+  "midnightcontrols.virtual_mouse.skin.default_light": "Standard Hell",
+  "midnightcontrols.virtual_mouse.skin.default_dark": "Standard Dunkel",
+  "midnightcontrols.virtual_mouse.skin.second_light": "Alternativ Hell",
+  "midnightcontrols.virtual_mouse.skin.second_dark": "Alternativ Dunkel",
+  "midnightcontrols.button.a": "A",
+  "midnightcontrols.button.b": "B",
+  "midnightcontrols.button.x": "X",
+  "midnightcontrols.button.y": "Y",
+  "modmenu.descriptionTranslation.midnightcontrols": "Fügt Controller-Unterstützung hinzu und verbessert allgemein die Steuerung.\nBasiert auf der LambdaControls mod, deren Entwicklung leider eingestellt wurde.",
+  "modmenu.summaryTranslation.midnightcontrols": "Fügt Controller-Unterstützung hinzu und verbessert allgemein die Steuerung."
 }
