MidnightControls 1.1.0 - 1.19, Inventory Improvements
- Update to 1.19
- Make buttons for Item/Stack Grabbing and Quick Moving configurable
- Add Keybinds for moving between Fabric Creative Inventory Pages

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -31,6 +31,10 @@
   "midnightcontrols.action.swap_hands": "Hände wechseln",
   "midnightcontrols.action.toggle_perspective": "Perspektive wechseln",
   "midnightcontrols.action.toggle_smooth_camera": "Cinematische Kamera",
+  "midnightcontrols.action.page_back": "Vorherige Seite",
+  "midnightcontrols.action.page_next": "Nächste Seite",
+  "midnightcontrols.action.take": "Item nehmen",
+  "midnightcontrols.action.take_all": "Stack nehmen",
   "midnightcontrols.action.use": "Benutzen",
   "midnightcontrols.action.zoom": "Zoom",
   "midnightcontrols.action.zoom_in": "Zoom erhöhen",
