--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -31,6 +31,10 @@
   "midnightcontrols.action.swap_hands": "Swap Hands",
   "midnightcontrols.action.toggle_perspective": "Toggle Perspective",
   "midnightcontrols.action.toggle_smooth_camera": "Toggle Cinematic Camera",
+  "midnightcontrols.action.page_back": "Previous Page",
+  "midnightcontrols.action.page_next": "Next Page",
+  "midnightcontrols.action.take": "Take Item",
+  "midnightcontrols.action.take_all": "Take Stack",
   "midnightcontrols.action.use": "Use",
   "midnightcontrols.action.zoom": "Zoom",
   "midnightcontrols.action.zoom_in": "Increase Zoom",
