MidnightControls 1.2.0 - Touchscreen, Modded Keybinds, Bugfixes
- Added #40 (Modded keybind support)
- Added #20 (Touchscreen support)
- Improved #13 (Sodium screen controller support)
- Attempt to fix #31 & #38 (Jittery input on low FPS)
- Fixed #35 (Front placing being broken)
- Fixed #32 (Option to disable double tap to sprint)
- Fixed #27 (Auto-adapt controller icons)
- Fixed #19 (HUD-scaling on big scales)
- Fixed #36 (Crash on game load)
- Fixed reset option
- Fixed scrolling in trading screens
- Disable features that might be considered as cheats (install MidnightControlsExtra to enable)

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -92,6 +92,7 @@
   "midnightcontrols.menu.controller2": "Zweiter Controller",
   "midnightcontrols.menu.controller_type": "Controller-Typ",
   "midnightcontrols.menu.controls_mode": "Modus",
+  "midnightcontrols.menu.double_tap_to_sprint": "Doppel-Tipp zum Sprinten",
   "midnightcontrols.menu.fast_block_placing": "Schnelles Bauen",
   "midnightcontrols.menu.fly_drifting": "Flug-Drifting",
   "midnightcontrols.menu.fly_drifting_vertical": "Vertikales Flug-Drifting",
