--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -96,6 +96,7 @@
   "midnightcontrols.menu.controller2": "Second Controller",
   "midnightcontrols.menu.controller_type": "Controller Type",
   "midnightcontrols.menu.controls_mode": "Mode",
+  "midnightcontrols.menu.double_tap_to_sprint": "Double-Tap to Sprint",
   "midnightcontrols.menu.fast_block_placing": "Fast Block Placing",
   "midnightcontrols.menu.fly_drifting": "Fly Drifting",
   "midnightcontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
